parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> statementList
Rule 2     statementList -> statement
Rule 3     statementList -> statementList statement
Rule 4     statement -> instruction
Rule 5     statement -> conditional
Rule 6     statement -> loop
Rule 7     statement -> function_definition
Rule 8     conditional -> IF OPEN_PAREN expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE
Rule 9     conditional -> IF OPEN_PAREN expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE ELSE OPEN_BRACE statementList CLOSE_BRACE
Rule 10    loop -> WHILE OPEN_PAREN expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE
Rule 11    function_definition -> FUNCTION STRING OPEN_PAREN args_list CLOSE_PAREN COLON type OPEN_BRACE statementList RETURN value SEMICOLON CLOSE_BRACE
Rule 12    function_call -> STRING OPEN_PAREN args_call CLOSE_PAREN
Rule 13    args_call -> expression
Rule 14    args_call -> expression COMMA args_call
Rule 15    args_call -> <empty>
Rule 16    args_list -> STRING COLON type
Rule 17    args_list -> STRING COLON type COMMA args_list
Rule 18    args_list -> <empty>
Rule 19    instruction -> declaration SEMICOLON
Rule 20    instruction -> asignation SEMICOLON
Rule 21    instruction -> property_asignation SEMICOLON
Rule 22    instruction -> function_call SEMICOLON
Rule 23    property_asignation -> STRING properties ASSIGN value
Rule 24    declaration -> LET declaration_identifier
Rule 25    declaration -> LET asignation
Rule 26    declaration -> TYPE STRING ASSIGN type_object
Rule 27    declaration_identifier -> STRING
Rule 28    declaration_identifier -> STRING COMMA declaration_identifier
Rule 29    declaration_identifier -> STRING COLON STRING
Rule 30    declaration_identifier -> STRING COLON STRING COMMA declaration_identifier
Rule 31    identifiers -> STRING
Rule 32    identifiers -> STRING COMMA identifiers
Rule 33    asignation -> identifiers ASSIGN value
Rule 34    asignation -> object_identifiers ASSIGN object
Rule 35    object_identifiers -> STRING COLON STRING
Rule 36    object_identifiers -> STRING COLON STRING COMMA object_identifiers
Rule 37    object -> OPEN_BRACE pairs CLOSE_BRACE
Rule 38    object -> OPEN_BRACE CLOSE_BRACE
Rule 39    pairs -> pair
Rule 40    pairs -> pair COMMA
Rule 41    pairs -> pair COMMA pairs
Rule 42    pair -> key COLON value
Rule 43    type_object -> OPEN_BRACE type_pairs CLOSE_BRACE
Rule 44    type_object -> OPEN_BRACE CLOSE_BRACE
Rule 45    type_pairs -> type_pair COMMA type_pairs
Rule 46    type_pairs -> type_pair
Rule 47    type_pairs -> type_pair COMMA
Rule 48    type_pair -> key COLON type
Rule 49    key -> QUOTED_STRING
Rule 50    key -> STRING
Rule 51    type -> CHARACTER
Rule 52    type -> INT_TYPE
Rule 53    type -> FLOAT_TYPE
Rule 54    type -> BOOLEAN
Rule 55    type -> type_object
Rule 56    type -> STRING
Rule 57    value -> NULL
Rule 58    value -> expression
Rule 59    value -> object
Rule 60    expression -> expression PLUS expression
Rule 61    expression -> expression MINUS expression
Rule 62    expression -> expression MULTIPLY expression
Rule 63    expression -> expression DIVISION expression
Rule 64    expression -> expression GRATER expression
Rule 65    expression -> expression LOWER expression
Rule 66    expression -> expression GRATER_EQUAL expression
Rule 67    expression -> expression LOWER_EQUAL expression
Rule 68    expression -> expression EQUAL expression
Rule 69    expression -> expression AND expression
Rule 70    expression -> expression OR expression
Rule 71    expression -> NOT expression
Rule 72    expression -> OPEN_PAREN expression CLOSE_PAREN
Rule 73    expression -> INTEGER
Rule 74    expression -> FLOAT
Rule 75    expression -> HEX
Rule 76    expression -> SCIENTIFIC
Rule 77    expression -> OCTAL
Rule 78    expression -> BINARY
Rule 79    expression -> CHARACTER_VALUE
Rule 80    expression -> TRUE
Rule 81    expression -> FALSE
Rule 82    expression -> STRING
Rule 83    expression -> object_property
Rule 84    expression -> function_call
Rule 85    object_property -> STRING properties
Rule 86    properties -> dot_property
Rule 87    properties -> square_property
Rule 88    properties -> dot_property properties
Rule 89    properties -> square_property properties
Rule 90    dot_property -> DOT STRING
Rule 91    square_property -> OPEN_SQUARE QUOTED_STRING CLOSE_SQUARE

Terminals, with rules where they appear

AND                  : 69
ASSIGN               : 23 26 33 34
BINARY               : 78
BOOLEAN              : 54
CHARACTER            : 51
CHARACTER_VALUE      : 79
CLOSE_BRACE          : 8 9 9 10 11 37 38 43 44
CLOSE_PAREN          : 8 9 10 11 12 72
CLOSE_SQUARE         : 91
COLON                : 11 16 17 29 30 35 36 42 48
COMMA                : 14 17 28 30 32 36 40 41 45 47
COMMENT              : 
DIVISION             : 63
DOT                  : 90
ELSE                 : 9
EQUAL                : 68
FALSE                : 81
FLOAT                : 74
FLOAT_TYPE           : 53
FUNCTION             : 11
GRATER               : 64
GRATER_EQUAL         : 66
HEX                  : 75
IF                   : 8 9
INTEGER              : 73
INT_TYPE             : 52
LET                  : 24 25
LOWER                : 65
LOWER_EQUAL          : 67
MINUS                : 61
MULTIPLY             : 62
NOT                  : 71
NULL                 : 57
OCTAL                : 77
OPEN_BRACE           : 8 9 9 10 11 37 38 43 44
OPEN_PAREN           : 8 9 10 11 12 72
OPEN_SQUARE          : 91
OR                   : 70
PLUS                 : 60
QUOTED_STRING        : 49 91
RETURN               : 11
SCIENTIFIC           : 76
SEMICOLON            : 11 19 20 21 22
STRING               : 11 12 16 17 23 26 27 28 29 29 30 30 31 32 35 35 36 36 50 56 82 85 90
TRUE                 : 80
TYPE                 : 26
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

args_call            : 12 14
args_list            : 11 17
asignation           : 20 25
conditional          : 5
declaration          : 19
declaration_identifier : 24 28 30
dot_property         : 86 88
expression           : 8 9 10 13 14 58 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 72
function_call        : 22 84
function_definition  : 7
identifiers          : 32 33
instruction          : 4
key                  : 42 48
loop                 : 6
object               : 34 59
object_identifiers   : 34 36
object_property      : 83
pair                 : 39 40 41
pairs                : 37 41
program              : 0
properties           : 23 85 88 89
property_asignation  : 21
square_property      : 87 89
statement            : 2 3
statementList        : 1 3 8 9 9 10 11
type                 : 11 16 17 48
type_object          : 26 55
type_pair            : 45 46 47
type_pairs           : 43 45
value                : 11 23 33 42

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statementList
    (2) statementList -> . statement
    (3) statementList -> . statementList statement
    (4) statement -> . instruction
    (5) statement -> . conditional
    (6) statement -> . loop
    (7) statement -> . function_definition
    (19) instruction -> . declaration SEMICOLON
    (20) instruction -> . asignation SEMICOLON
    (21) instruction -> . property_asignation SEMICOLON
    (22) instruction -> . function_call SEMICOLON
    (8) conditional -> . IF OPEN_PAREN expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE
    (9) conditional -> . IF OPEN_PAREN expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE ELSE OPEN_BRACE statementList CLOSE_BRACE
    (10) loop -> . WHILE OPEN_PAREN expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE
    (11) function_definition -> . FUNCTION STRING OPEN_PAREN args_list CLOSE_PAREN COLON type OPEN_BRACE statementList RETURN value SEMICOLON CLOSE_BRACE
    (24) declaration -> . LET declaration_identifier
    (25) declaration -> . LET asignation
    (26) declaration -> . TYPE STRING ASSIGN type_object
    (33) asignation -> . identifiers ASSIGN value
    (34) asignation -> . object_identifiers ASSIGN object
    (23) property_asignation -> . STRING properties ASSIGN value
    (12) function_call -> . STRING OPEN_PAREN args_call CLOSE_PAREN
    (31) identifiers -> . STRING
    (32) identifiers -> . STRING COMMA identifiers
    (35) object_identifiers -> . STRING COLON STRING
    (36) object_identifiers -> . STRING COLON STRING COMMA object_identifiers

    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FUNCTION        shift and go to state 14
    LET             shift and go to state 16
    TYPE            shift and go to state 17
    STRING          shift and go to state 15

    program                        shift and go to state 1
    statementList                  shift and go to state 2
    statement                      shift and go to state 3
    instruction                    shift and go to state 4
    conditional                    shift and go to state 5
    loop                           shift and go to state 6
    function_definition            shift and go to state 7
    declaration                    shift and go to state 8
    asignation                     shift and go to state 9
    property_asignation            shift and go to state 10
    function_call                  shift and go to state 11
    identifiers                    shift and go to state 18
    object_identifiers             shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> statementList .
    (3) statementList -> statementList . statement
    (4) statement -> . instruction
    (5) statement -> . conditional
    (6) statement -> . loop
    (7) statement -> . function_definition
    (19) instruction -> . declaration SEMICOLON
    (20) instruction -> . asignation SEMICOLON
    (21) instruction -> . property_asignation SEMICOLON
    (22) instruction -> . function_call SEMICOLON
    (8) conditional -> . IF OPEN_PAREN expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE
    (9) conditional -> . IF OPEN_PAREN expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE ELSE OPEN_BRACE statementList CLOSE_BRACE
    (10) loop -> . WHILE OPEN_PAREN expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE
    (11) function_definition -> . FUNCTION STRING OPEN_PAREN args_list CLOSE_PAREN COLON type OPEN_BRACE statementList RETURN value SEMICOLON CLOSE_BRACE
    (24) declaration -> . LET declaration_identifier
    (25) declaration -> . LET asignation
    (26) declaration -> . TYPE STRING ASSIGN type_object
    (33) asignation -> . identifiers ASSIGN value
    (34) asignation -> . object_identifiers ASSIGN object
    (23) property_asignation -> . STRING properties ASSIGN value
    (12) function_call -> . STRING OPEN_PAREN args_call CLOSE_PAREN
    (31) identifiers -> . STRING
    (32) identifiers -> . STRING COMMA identifiers
    (35) object_identifiers -> . STRING COLON STRING
    (36) object_identifiers -> . STRING COLON STRING COMMA object_identifiers

    $end            reduce using rule 1 (program -> statementList .)
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    FUNCTION        shift and go to state 14
    LET             shift and go to state 16
    TYPE            shift and go to state 17
    STRING          shift and go to state 15

    statement                      shift and go to state 20
    instruction                    shift and go to state 4
    conditional                    shift and go to state 5
    loop                           shift and go to state 6
    function_definition            shift and go to state 7
    declaration                    shift and go to state 8
    asignation                     shift and go to state 9
    property_asignation            shift and go to state 10
    function_call                  shift and go to state 11
    identifiers                    shift and go to state 18
    object_identifiers             shift and go to state 19

state 3

    (2) statementList -> statement .

    IF              reduce using rule 2 (statementList -> statement .)
    WHILE           reduce using rule 2 (statementList -> statement .)
    FUNCTION        reduce using rule 2 (statementList -> statement .)
    LET             reduce using rule 2 (statementList -> statement .)
    TYPE            reduce using rule 2 (statementList -> statement .)
    STRING          reduce using rule 2 (statementList -> statement .)
    $end            reduce using rule 2 (statementList -> statement .)
    CLOSE_BRACE     reduce using rule 2 (statementList -> statement .)
    RETURN          reduce using rule 2 (statementList -> statement .)


state 4

    (4) statement -> instruction .

    IF              reduce using rule 4 (statement -> instruction .)
    WHILE           reduce using rule 4 (statement -> instruction .)
    FUNCTION        reduce using rule 4 (statement -> instruction .)
    LET             reduce using rule 4 (statement -> instruction .)
    TYPE            reduce using rule 4 (statement -> instruction .)
    STRING          reduce using rule 4 (statement -> instruction .)
    $end            reduce using rule 4 (statement -> instruction .)
    CLOSE_BRACE     reduce using rule 4 (statement -> instruction .)
    RETURN          reduce using rule 4 (statement -> instruction .)


state 5

    (5) statement -> conditional .

    IF              reduce using rule 5 (statement -> conditional .)
    WHILE           reduce using rule 5 (statement -> conditional .)
    FUNCTION        reduce using rule 5 (statement -> conditional .)
    LET             reduce using rule 5 (statement -> conditional .)
    TYPE            reduce using rule 5 (statement -> conditional .)
    STRING          reduce using rule 5 (statement -> conditional .)
    $end            reduce using rule 5 (statement -> conditional .)
    CLOSE_BRACE     reduce using rule 5 (statement -> conditional .)
    RETURN          reduce using rule 5 (statement -> conditional .)


state 6

    (6) statement -> loop .

    IF              reduce using rule 6 (statement -> loop .)
    WHILE           reduce using rule 6 (statement -> loop .)
    FUNCTION        reduce using rule 6 (statement -> loop .)
    LET             reduce using rule 6 (statement -> loop .)
    TYPE            reduce using rule 6 (statement -> loop .)
    STRING          reduce using rule 6 (statement -> loop .)
    $end            reduce using rule 6 (statement -> loop .)
    CLOSE_BRACE     reduce using rule 6 (statement -> loop .)
    RETURN          reduce using rule 6 (statement -> loop .)


state 7

    (7) statement -> function_definition .

    IF              reduce using rule 7 (statement -> function_definition .)
    WHILE           reduce using rule 7 (statement -> function_definition .)
    FUNCTION        reduce using rule 7 (statement -> function_definition .)
    LET             reduce using rule 7 (statement -> function_definition .)
    TYPE            reduce using rule 7 (statement -> function_definition .)
    STRING          reduce using rule 7 (statement -> function_definition .)
    $end            reduce using rule 7 (statement -> function_definition .)
    CLOSE_BRACE     reduce using rule 7 (statement -> function_definition .)
    RETURN          reduce using rule 7 (statement -> function_definition .)


state 8

    (19) instruction -> declaration . SEMICOLON

    SEMICOLON       shift and go to state 21


state 9

    (20) instruction -> asignation . SEMICOLON

    SEMICOLON       shift and go to state 22


state 10

    (21) instruction -> property_asignation . SEMICOLON

    SEMICOLON       shift and go to state 23


state 11

    (22) instruction -> function_call . SEMICOLON

    SEMICOLON       shift and go to state 24


state 12

    (8) conditional -> IF . OPEN_PAREN expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE
    (9) conditional -> IF . OPEN_PAREN expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE ELSE OPEN_BRACE statementList CLOSE_BRACE

    OPEN_PAREN      shift and go to state 25


state 13

    (10) loop -> WHILE . OPEN_PAREN expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE

    OPEN_PAREN      shift and go to state 26


state 14

    (11) function_definition -> FUNCTION . STRING OPEN_PAREN args_list CLOSE_PAREN COLON type OPEN_BRACE statementList RETURN value SEMICOLON CLOSE_BRACE

    STRING          shift and go to state 27


state 15

    (23) property_asignation -> STRING . properties ASSIGN value
    (12) function_call -> STRING . OPEN_PAREN args_call CLOSE_PAREN
    (31) identifiers -> STRING .
    (32) identifiers -> STRING . COMMA identifiers
    (35) object_identifiers -> STRING . COLON STRING
    (36) object_identifiers -> STRING . COLON STRING COMMA object_identifiers
    (86) properties -> . dot_property
    (87) properties -> . square_property
    (88) properties -> . dot_property properties
    (89) properties -> . square_property properties
    (90) dot_property -> . DOT STRING
    (91) square_property -> . OPEN_SQUARE QUOTED_STRING CLOSE_SQUARE

    OPEN_PAREN      shift and go to state 29
    ASSIGN          reduce using rule 31 (identifiers -> STRING .)
    COMMA           shift and go to state 30
    COLON           shift and go to state 31
    DOT             shift and go to state 34
    OPEN_SQUARE     shift and go to state 35

    properties                     shift and go to state 28
    dot_property                   shift and go to state 32
    square_property                shift and go to state 33

state 16

    (24) declaration -> LET . declaration_identifier
    (25) declaration -> LET . asignation
    (27) declaration_identifier -> . STRING
    (28) declaration_identifier -> . STRING COMMA declaration_identifier
    (29) declaration_identifier -> . STRING COLON STRING
    (30) declaration_identifier -> . STRING COLON STRING COMMA declaration_identifier
    (33) asignation -> . identifiers ASSIGN value
    (34) asignation -> . object_identifiers ASSIGN object
    (31) identifiers -> . STRING
    (32) identifiers -> . STRING COMMA identifiers
    (35) object_identifiers -> . STRING COLON STRING
    (36) object_identifiers -> . STRING COLON STRING COMMA object_identifiers

    STRING          shift and go to state 38

    declaration_identifier         shift and go to state 36
    asignation                     shift and go to state 37
    identifiers                    shift and go to state 18
    object_identifiers             shift and go to state 19

state 17

    (26) declaration -> TYPE . STRING ASSIGN type_object

    STRING          shift and go to state 39


state 18

    (33) asignation -> identifiers . ASSIGN value

    ASSIGN          shift and go to state 40


state 19

    (34) asignation -> object_identifiers . ASSIGN object

    ASSIGN          shift and go to state 41


state 20

    (3) statementList -> statementList statement .

    IF              reduce using rule 3 (statementList -> statementList statement .)
    WHILE           reduce using rule 3 (statementList -> statementList statement .)
    FUNCTION        reduce using rule 3 (statementList -> statementList statement .)
    LET             reduce using rule 3 (statementList -> statementList statement .)
    TYPE            reduce using rule 3 (statementList -> statementList statement .)
    STRING          reduce using rule 3 (statementList -> statementList statement .)
    $end            reduce using rule 3 (statementList -> statementList statement .)
    CLOSE_BRACE     reduce using rule 3 (statementList -> statementList statement .)
    RETURN          reduce using rule 3 (statementList -> statementList statement .)


state 21

    (19) instruction -> declaration SEMICOLON .

    IF              reduce using rule 19 (instruction -> declaration SEMICOLON .)
    WHILE           reduce using rule 19 (instruction -> declaration SEMICOLON .)
    FUNCTION        reduce using rule 19 (instruction -> declaration SEMICOLON .)
    LET             reduce using rule 19 (instruction -> declaration SEMICOLON .)
    TYPE            reduce using rule 19 (instruction -> declaration SEMICOLON .)
    STRING          reduce using rule 19 (instruction -> declaration SEMICOLON .)
    $end            reduce using rule 19 (instruction -> declaration SEMICOLON .)
    CLOSE_BRACE     reduce using rule 19 (instruction -> declaration SEMICOLON .)
    RETURN          reduce using rule 19 (instruction -> declaration SEMICOLON .)


state 22

    (20) instruction -> asignation SEMICOLON .

    IF              reduce using rule 20 (instruction -> asignation SEMICOLON .)
    WHILE           reduce using rule 20 (instruction -> asignation SEMICOLON .)
    FUNCTION        reduce using rule 20 (instruction -> asignation SEMICOLON .)
    LET             reduce using rule 20 (instruction -> asignation SEMICOLON .)
    TYPE            reduce using rule 20 (instruction -> asignation SEMICOLON .)
    STRING          reduce using rule 20 (instruction -> asignation SEMICOLON .)
    $end            reduce using rule 20 (instruction -> asignation SEMICOLON .)
    CLOSE_BRACE     reduce using rule 20 (instruction -> asignation SEMICOLON .)
    RETURN          reduce using rule 20 (instruction -> asignation SEMICOLON .)


state 23

    (21) instruction -> property_asignation SEMICOLON .

    IF              reduce using rule 21 (instruction -> property_asignation SEMICOLON .)
    WHILE           reduce using rule 21 (instruction -> property_asignation SEMICOLON .)
    FUNCTION        reduce using rule 21 (instruction -> property_asignation SEMICOLON .)
    LET             reduce using rule 21 (instruction -> property_asignation SEMICOLON .)
    TYPE            reduce using rule 21 (instruction -> property_asignation SEMICOLON .)
    STRING          reduce using rule 21 (instruction -> property_asignation SEMICOLON .)
    $end            reduce using rule 21 (instruction -> property_asignation SEMICOLON .)
    CLOSE_BRACE     reduce using rule 21 (instruction -> property_asignation SEMICOLON .)
    RETURN          reduce using rule 21 (instruction -> property_asignation SEMICOLON .)


state 24

    (22) instruction -> function_call SEMICOLON .

    IF              reduce using rule 22 (instruction -> function_call SEMICOLON .)
    WHILE           reduce using rule 22 (instruction -> function_call SEMICOLON .)
    FUNCTION        reduce using rule 22 (instruction -> function_call SEMICOLON .)
    LET             reduce using rule 22 (instruction -> function_call SEMICOLON .)
    TYPE            reduce using rule 22 (instruction -> function_call SEMICOLON .)
    STRING          reduce using rule 22 (instruction -> function_call SEMICOLON .)
    $end            reduce using rule 22 (instruction -> function_call SEMICOLON .)
    CLOSE_BRACE     reduce using rule 22 (instruction -> function_call SEMICOLON .)
    RETURN          reduce using rule 22 (instruction -> function_call SEMICOLON .)


state 25

    (8) conditional -> IF OPEN_PAREN . expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE
    (9) conditional -> IF OPEN_PAREN . expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE ELSE OPEN_BRACE statementList CLOSE_BRACE
    (60) expression -> . expression PLUS expression
    (61) expression -> . expression MINUS expression
    (62) expression -> . expression MULTIPLY expression
    (63) expression -> . expression DIVISION expression
    (64) expression -> . expression GRATER expression
    (65) expression -> . expression LOWER expression
    (66) expression -> . expression GRATER_EQUAL expression
    (67) expression -> . expression LOWER_EQUAL expression
    (68) expression -> . expression EQUAL expression
    (69) expression -> . expression AND expression
    (70) expression -> . expression OR expression
    (71) expression -> . NOT expression
    (72) expression -> . OPEN_PAREN expression CLOSE_PAREN
    (73) expression -> . INTEGER
    (74) expression -> . FLOAT
    (75) expression -> . HEX
    (76) expression -> . SCIENTIFIC
    (77) expression -> . OCTAL
    (78) expression -> . BINARY
    (79) expression -> . CHARACTER_VALUE
    (80) expression -> . TRUE
    (81) expression -> . FALSE
    (82) expression -> . STRING
    (83) expression -> . object_property
    (84) expression -> . function_call
    (85) object_property -> . STRING properties
    (12) function_call -> . STRING OPEN_PAREN args_call CLOSE_PAREN

    NOT             shift and go to state 44
    OPEN_PAREN      shift and go to state 42
    INTEGER         shift and go to state 45
    FLOAT           shift and go to state 46
    HEX             shift and go to state 47
    SCIENTIFIC      shift and go to state 48
    OCTAL           shift and go to state 49
    BINARY          shift and go to state 50
    CHARACTER_VALUE shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53
    STRING          shift and go to state 54

    expression                     shift and go to state 43
    object_property                shift and go to state 55
    function_call                  shift and go to state 56

state 26

    (10) loop -> WHILE OPEN_PAREN . expression CLOSE_PAREN OPEN_BRACE statementList CLOSE_BRACE
    (60) expression -> . expression PLUS expression
    (61) expression -> . expression MINUS expression
    (62) expression -> . expression MULTIPLY expression
    (63) expression -> . expression DIVISION expression
    (64) expression -> . expression GRATER expression
    (65) expression -> . expression LOWER expression
    (66) expression -> . expression GRATER_EQUAL expression
    (67) expression -> . expression LOWER_EQUAL expression
    (68) expression -> . expression EQUAL expression
    (69) expression -> . expression AND expression
    (70) expression -> . expression OR expression
    (71) expression -> . NOT expression
    (72) expression -> . OPEN_PAREN expression CLOSE_PAREN
    (73) expression -> . INTEGER
    (74) expression -> . FLOAT
    (75) expression -> . HEX
    (76) expression -> . SCIENTIFIC
    (77) expression -> . OCTAL
    (78) expression -> . BINARY
    (79) expression -> . CHARACTER_VALUE
    (80) expression -> . TRUE
    (81) expression -> . FALSE
    (82) expression -> . STRING
    (83) expression -> . object_property
    (84) expression -> . function_call
    (85) object_property -> . STRING properties
    (12) function_call -> . STRING OPEN_PAREN args_call CLOSE_PAREN

    NOT             shift and go to state 44
    OPEN_PAREN      shift and go to state 42
    INTEGER         shift and go to state 45
    FLOAT           shift and go to state 46
    HEX             shift and go to state 47
    SCIENTIFIC      shift and go to state 48
    OCTAL           shift and go to state 49
    BINARY          shift and go to state 50
    CHARACTER_VALUE shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53
    STRING          shift and go to state 54

    expression                     shift and go to state 57
    object_property                shift and go to state 55
    function_call                  shift and go to state 56

state 27

    (11) function_definition -> FUNCTION STRING . OPEN_PAREN args_list CLOSE_PAREN COLON type OPEN_BRACE statementList RETURN value SEMICOLON CLOSE_BRACE

    OPEN_PAREN      shift and go to state 58


state 28

    (23) property_asignation -> STRING properties . ASSIGN value

    ASSIGN          shift and go to state 59


state 29

    (12) function_call -> STRING OPEN_PAREN . args_call CLOSE_PAREN
    (13) args_call -> . expression
    (14) args_call -> . expression COMMA args_call
    (15) args_call -> .
    (60) expression -> . expression PLUS expression
    (61) expression -> . expression MINUS expression
    (62) expression -> . expression MULTIPLY expression
    (63) expression -> . expression DIVISION expression
    (64) expression -> . expression GRATER expression
    (65) expression -> . expression LOWER expression
    (66) expression -> . expression GRATER_EQUAL expression
    (67) expression -> . expression LOWER_EQUAL expression
    (68) expression -> . expression EQUAL expression
    (69) expression -> . expression AND expression
    (70) expression -> . expression OR expression
    (71) expression -> . NOT expression
    (72) expression -> . OPEN_PAREN expression CLOSE_PAREN
    (73) expression -> . INTEGER
    (74) expression -> . FLOAT
    (75) expression -> . HEX
    (76) expression -> . SCIENTIFIC
    (77) expression -> . OCTAL
    (78) expression -> . BINARY
    (79) expression -> . CHARACTER_VALUE
    (80) expression -> . TRUE
    (81) expression -> . FALSE
    (82) expression -> . STRING
    (83) expression -> . object_property
    (84) expression -> . function_call
    (85) object_property -> . STRING properties
    (12) function_call -> . STRING OPEN_PAREN args_call CLOSE_PAREN

    CLOSE_PAREN     reduce using rule 15 (args_call -> .)
    NOT             shift and go to state 44
    OPEN_PAREN      shift and go to state 42
    INTEGER         shift and go to state 45
    FLOAT           shift and go to state 46
    HEX             shift and go to state 47
    SCIENTIFIC      shift and go to state 48
    OCTAL           shift and go to state 49
    BINARY          shift and go to state 50
    CHARACTER_VALUE shift and go to state 51
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53
    STRING          shift and go to state 54

    args_call                      shift and go to state 60
    expression                     shift and go to state 61
    object_property                shift and go to state 55
    function_call                  shift and go to state 56

state 30

    (32) identifiers -> STRING COMMA . identifiers
    (31) identifiers -> . STRING
    (32) identifiers -> . STRING COMMA identifiers

    STRING          shift and go to state 62

    identifiers                    shift and go to state 63

state 31

    (35) object_identifiers -> STRING COLON . STRING
    (36) object_identifiers -> STRING COLON . STRING COMMA object_identifiers

    STRING          shift and go to state 64


state 32

    (86) properties -> dot_property .
    (88) properties -> dot_property . properties
    (86) properties -> . dot_property
    (87) properties -> . square_property
    (88) properties -> . dot_property properties
    (89) properties -> . square_property properties
    (90) dot_property -> . DOT STRING
    (91) square_property -> . OPEN_SQUARE QUOTED_STRING CLOSE_SQUARE

    ASSIGN          reduce using rule 86 (properties -> dot_property .)
    CLOSE_PAREN     reduce using rule 86 (properties -> dot_property .)
    PLUS            reduce using rule 86 (properties -> dot_property .)
    MINUS           reduce using rule 86 (properties -> dot_property .)
    MULTIPLY        reduce using rule 86 (properties -> dot_property .)
    DIVISION        reduce using rule 86 (properties -> dot_property .)
    GRATER          reduce using rule 86 (properties -> dot_property .)
    LOWER           reduce using rule 86 (properties -> dot_property .)
    GRATER_EQUAL    reduce using rule 86 (properties -> dot_property .)
    LOWER_EQUAL     reduce using rule 86 (properties -> dot_property .)
    EQUAL           reduce using rule 86 (properties -> dot_property .)
    AND             reduce using rule 86 (properties -> dot_property .)
    OR              reduce using rule 86 (properties -> dot_property .)
    COMMA           reduce using rule 86 (properties -> dot_property .)
    SEMICOLON       reduce using rule 86 (properties -> dot_property .)
    CLOSE_BRACE     reduce using rule 86 (properties -> dot_property .)
    DOT             shift and go to state 34
    OPEN_SQUARE     shift and go to state 35

    dot_property                   shift and go to state 32
    properties                     shift and go to state 65
    square_property                shift and go to state 33

state 33

    (87) properties -> square_property .
    (89) properties -> square_property . properties
    (86) properties -> . dot_property
    (87) properties -> . square_property
    (88) properties -> . dot_property properties
    (89) properties -> . square_property properties
    (90) dot_property -> . DOT STRING
    (91) square_property -> . OPEN_SQUARE QUOTED_STRING CLOSE_SQUARE

    ASSIGN          reduce using rule 87 (properties -> square_property .)
    CLOSE_PAREN     reduce using rule 87 (properties -> square_property .)
    PLUS            reduce using rule 87 (properties -> square_property .)
    MINUS           reduce using rule 87 (properties -> square_property .)
    MULTIPLY        reduce using rule 87 (properties -> square_property .)
    DIVISION        reduce using rule 87 (properties -> square_property .)
    GRATER          reduce using rule 87 (properties -> square_property .)
    LOWER           reduce using rule 87 (properties -> square_property .)
    GRATER_EQUAL    reduce using rule 87 (properties -> square_property .)
    LOWER_EQUAL     reduce using rule 87 (properties -> square_property .)
    EQUAL           reduce using rule 87 (properties -> square_property .)
    AND             reduce using rule 87 (properties -> square_property .)
    OR              reduce using rule 87 (properties -> square_property .)
    COMMA           reduce using rule 87 (properties -> square_property .)
    SEMICOLON       reduce using rule 87 (properties -> square_property .)
    CLOSE_BRACE     reduce using rule 87 (properties -> square_property .)
    DOT             shift and go to state 34
    OPEN_SQUARE     shift and go to state 35

    square_property                shift and go to state 33
    properties                     shift and go to state 66
    dot_property                   shift and go to state 32

state 34

    (90) dot_property -> DOT . STRING

    STRING          shift and go to state 67


state 35

    (91) square_property -> OPEN_SQUARE . QUOTED_STRING CLOSE_SQUARE

    QUOTED_STRING   shift and go to state 68


state 36

    (24) declaration -> LET declaration_identifier .

    SEMICOLON       reduce using rule 24 (declaration -> LET declaration_identifier .)


state 37

    (25) declaration -> LET asignation .

    SEMICOLON       reduce using rule 25 (declaration -> LET asignation .)


state 38

    (27) declaration_identifier -> STRING .
    (28) declaration_identifier -> STRING . COMMA declaration_identifier
    (29) declaration_identifier -> STRING . COLON STRING
    (30) declaration_identifier -> STRING . COLON STRING COMMA declaration_identifier
    (31) identifiers -> STRING .
    (32) identifiers -> STRING . COMMA identifiers
    (35) object_identifiers -> STRING . COLON STRING
    (36) object_identifiers -> STRING . COLON STRING COMMA object_identifiers

    SEMICOLON       reduce using rule 27 (declaration_identifier -> STRING .)
    COMMA           shift and go to state 69
    COLON           shift and go to state 70
    ASSIGN          reduce using rule 31 (identifiers -> STRING .)


state 39

    (26) declaration -> TYPE STRING . ASSIGN type_object

    ASSIGN          shift and go to state 71


state 40
